--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.19.1",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
     "next": "^13.0.6",
+    "next-sanity": "^5.5.10",
     "react": "18",
     "react-dom": "18",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "sanity": "^3.19.1",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.12",
