--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ESNext"
+    "target": "ES2017"
   },
   "exclude": [".next", "node_modules"],
   "include": [".next/types/**/*.ts", "next-env.d.ts", "**/*.ts", "**/*.tsx"]
